<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"

    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />



    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_catalogo"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_catalogo"
        android:name="com.example.myapplication.ui.catalogo.CatalogoFragment"
        android:label="@string/menu_catalogo"
        tools:layout="@layout/fragment_catalogo" />

    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.myapplication.MainActivity"
        android:label="@string/menu_logout"
        tools:layout="@layout/activity_main" />
    <activity
        android:id="@+id/nav_custom"

        android:name="com.example.myapplication.ui.custom.Registrarse"
        android:label="@string/menu_registrar"
        tools:layout="@layout/activity_registrarse" />

</navigation>