<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
   <!-- <item
        android:id="@+id/app_bar_switch"
        android:title="Cambiar Modo Usuario"
        app:actionLayout="@layout/switch_item" />-->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="Inicio"
            />

    <item
        android:id="@+id/nav_iniciosesion"

        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/iniciarSesion" />
        <!--
             <item
            android:id="@+id/nav_home1"
            android:icon="@drawable/ic_baseline_delivery_dining_24"
            android:title="Mis pedidos"/>-->


<!--
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/mis_favoritos" />-->

        <item
            android:id="@+id/nav_slideshow"

            android:icon="@drawable/ic_baseline_add_box_24"
            android:title="@string/menu_registrar" />
    <item
        android:id="@+id/nav_crear_negocio"

        android:icon="@drawable/ic_baseline_add_business_24"
        android:title="@string/menu_registrar_negocio" />
    <item
        android:id="@+id/nav_editar_negocio"

        android:icon="@drawable/ic_baseline_add_business_24"
        android:title="@string/menu_editar_negocio"
        android:visible="false"/>

      <item android:id="@+id/subMenu1"

           android:title="Productos y Negocios">
           <menu>
               <item
                   android:id="@+id/nav_catalog"
                   android:icon="@drawable/ic_baseline_food_bank_24"
                   android:title="@string/menu_catalogo" />
               <item
                   android:id="@+id/nav_negocio"
                   android:icon="@drawable/ic_baseline_business_center_24"
                   android:title="@string/menu_negocio" />
               <item
                   android:id="@+id/nav_carrito"
                   android:icon="@drawable/iconcarrito"
                   android:title="Carrito" />
           </menu>


       </item>
<!--
       <item android:id="@+id/subMenu"

           android:title="">
           <menu>
               <item
                   android:id="@+id/nav_logout"
                   android:icon="@drawable/ic_baseline_logout_24"
                   android:title="@string/salir" />
           </menu>

       </item>-->



</menu>