<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/listgrad"
    android:padding="@dimen/dimen_12"
    tools:context=".EditarNegocioFragment">



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EntradaNombreNegocio123"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"

            android:background="@drawable/rounded_edittext_states"
            android:hint="@string/nombre_del_negocio"
            app:counterMaxLength="30"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EntradaUbicacion123"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@drawable/rounded_edittext_states"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/ubicaci_n"
            android:layout_marginTop="8dp"


            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EntradaEmailNegocio123"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext_states"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:clickable="true"
            android:layout_marginTop="8dp"
            android:focusable="true" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EntradaDescripcionNegocio123"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_states"
            android:inputType="text"
            android:hint="@string/descripci_n_del_negocio"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/telefonos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:background="@drawable/rounded_edittext_states"
            android:hint="telefono"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_baseline_storefront_24"
            android:layout_height="0dp"
            android:layout_weight=".55"
            android:contentDescription="@string/todo" />
        <Button
            android:id="@+id/buttonModificarImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/dimen_16"
            android:background="@drawable/rounded_botones"
            android:fontFamily="@font/roboto_fonts_family"
            android:hint="@string/modificar_imagen"
            android:textColorHint="@color/boton"
            tools:ignore="SpUsage" />
        <Button
            android:id="@+id/buttonModificarNegocio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="@dimen/dimen_16"
            android:background="@drawable/rounded_botones"
            android:fontFamily="@font/roboto_fonts_family"
            android:hint="@string/aplicar_cambios"
            android:textColorHint="@color/boton"
            tools:ignore="SpUsage"
            >

        </Button>


    </LinearLayout>



</LinearLayout>