<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_12">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_height="@dimen/dimen_48"
            android:text="@string/titulo_comida"
            android:textSize="@dimen/font_size_24"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubTitle11"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_48"
                android:textColor="@color/black"

                android:textStyle="bold"
                android:text="Email: "
                android:textSize="@dimen/font_size_16"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48"
                android:textColor="@color/black"
                android:text="@string/msg_logout"
                android:textSize="@dimen/font_size_16"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubTitle1312"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_48"
                android:textColor="@color/black"

                android:textStyle="bold"
                android:text="Descripcion: "
                android:textSize="@dimen/font_size_16"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubTitle1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48"
                android:textColor="@color/black"
                android:text="@string/msg_logout"
                android:textSize="@dimen/font_size_16"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubTitle112"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_48"
                android:textColor="@color/black"

                android:textStyle="bold"
                android:text="Ubicacion: "
                android:textSize="@dimen/font_size_16"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubTitle2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48"
                android:textColor="@color/black"
                android:text="@string/msg_logout"
                android:textSize="@dimen/font_size_16"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubTitle1112"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_48"
                android:textColor="@color/black"

                android:textStyle="bold"
                android:text="Telefono: "
                android:textSize="@dimen/font_size_16"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubTitle3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_48"
                android:textColor="@color/black"
                android:text="@string/msg_logout"
                android:textSize="@dimen/font_size_16"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            >

            <RatingBar
                android:id="@+id/ratingBar1"
                android:layout_width="wrap_content"
                android:progressTint="#ffff8800"

                android:isIndicator="true"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:numStars="5"
                android:stepSize="0.5"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:showDividers="middle"
            >




            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNegative"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="0.5"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/label_cancel"
                />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>